// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gardener-dashboard clusterrolebinding should render the template with default values 1`] = `
Object {
  "apiVersion": "rbac.authorization.k8s.io/v1",
  "kind": "ClusterRoleBinding",
  "metadata": Object {
    "labels": Object {
      "app": "gardener-dashboard",
      "chart": "application-0.1.0",
      "heritage": "Helm",
      "release": "application",
    },
    "name": "gardener.cloud:system:dashboard",
  },
  "roleRef": Object {
    "apiGroup": "rbac.authorization.k8s.io",
    "kind": "ClusterRole",
    "name": "gardener.cloud:system:dashboard",
  },
  "subjects": Array [
    Object {
      "kind": "ServiceAccount",
      "name": "gardener-dashboard",
      "namespace": "garden",
    },
  ],
}
`;

exports[`gardener-dashboard clusterrolebinding when virtual garden is enabled should render the template 1`] = `
Object {
  "apiVersion": "rbac.authorization.k8s.io/v1",
  "kind": "ClusterRoleBinding",
  "metadata": Object {
    "labels": Object {
      "app": "gardener-dashboard",
      "chart": "application-0.1.0",
      "heritage": "Helm",
      "release": "application",
    },
    "name": "gardener.cloud:system:dashboard",
  },
  "roleRef": Object {
    "apiGroup": "rbac.authorization.k8s.io",
    "kind": "ClusterRole",
    "name": "gardener.cloud:system:dashboard",
  },
  "subjects": Array [
    Object {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "User",
      "name": "runtime-cluster:system:serviceaccount:garden:gardener-dashboard",
    },
  ],
}
`;
